# inverse-prufer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  release.yml
src/: lib.rs  main.rs  prufer.rs  tests.rs
tree-printer/: Cargo.toml
tree-printer/src/: config.rs  decorators.rs  lib.rs  line_buffer.rs  printers.rs  text.rs  tree_node.rs  util.rs
tree-printer/src/decorator/: mod.rs
tree-printer/src/printer/: mod.rs
tree-printer/src/printer/traditional/: aligner.rs  config.rs  liner.rs  mod.rs
tree-printer/src/printers/: traditional.rs
tree-printer/src/printers/traditional/: aligners.rs  liners.rs
tree-printer/src/traditional/: config.rs
